gcp/asm/istio-egress/01-egress-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: saas-egress-gw
  namespace: istio-system
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 443
      name: tls-passthrough
      protocol: TLS
    tls:
      mode: ISTIO_MUTUAL
    hosts:
    - api.saas1.com
    - api.saas3.com
  - port:
      number: 80
      name: http-origination
      protocol: HTTP
    hosts:
    - api.saas2.com
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: egress-gateway-mtls
  namespace: istio-system
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
